fix overflow in mobile browsers

--- a/src/Pages/homepage/Homepage.module.css
+++ b/src/Pages/homepage/Homepage.module.css
@@ -1,8 +1,8 @@
 h1 {
-    font-size: 4rem;
-    color: #ffff00;
+    font-size: 3rem;
+    color: #ffffff;
     text-align: center;
-    padding: 10px 0 0 0;
+    margin: 5px 0 30px 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
