--- a/src/Pages/pokedex/Pokedex.module.css
+++ b/src/Pages/pokedex/Pokedex.module.css
@@ -1,11 +1,3 @@
-h1 {
-    font-size: 300%;
-    color: white;
-    width: 100%;
-    text-align: center;
-    margin: 30px 0;
-}
-
 .prevNextButtons button {
     background-color: aliceblue;
     display: flex;
